# runic

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
assets/: cube.vert  triangle.frag  triangle.vert
src/: CMakeLists.txt  application.cppm  camera.cppm  engine.cppm  glfw_context.cppm  input.cppm  light.cppm  math.cppm  mesh.cppm  program.cppm  renderer.cppm  runic.cppm  scene.cppm  utils.cppm  window.cppm
